--- a/src/main/resources/templates/product-add-storage.html
+++ b/src/main/resources/templates/product-add-storage.html
@@ -10,14 +10,15 @@
 <header th:insert="blocks/header :: header"></header>
 
 <div class="container" style="text-align: center">
-    <form method="post" th:action="@{/orders/}+${order}+@{/add}">
+    <form method="post" th:action="@{/products/}+${product.id}+@{/add}">
         <br>
-        <h2>Добавление услуги</h2>
+        <h2 th:text='${"Добавление "+product.product_name+" в склад"}'/>
         <br>
-        <input class="form-control" list="services" name="service_id" required id="service" placeholder="Выберите Сервис"><br>
-        <datalist  id="services">
-            <option th:each="el:${services}" th:value="${el.id}" th:text='${el.service_name+" "+el.price}'/>
+        <input class="form-control" list="providers" name="provider_id" required id="service" placeholder="Выберите Поставщика"><br>
+        <datalist  id="providers">
+            <option th:each="el:${providers}" th:value="${el.id}" th:text='${el.provider_name}'/>
         </datalist><br>
+        <input type="number" class="form-control" placeholder="Цена за количество" name="price" required><br>
         <input type="number" class="form-control" placeholder="Количество" name="quantity" required><br>
         <button style="width: 100%" type="submit" class="btn btn-success">Add</button>
     </form>
