--- a/src/main/resources/templates/services.html
+++ b/src/main/resources/templates/services.html
@@ -48,7 +48,7 @@
 
         </div>
     </div>
-
+    <img src="http://api.qrserver.com/v1/create-qr-code/?data=http://localhost:8089/orders/101!&size=400x400">
 </main>
 <footer th:insert="blocks/footer::footer"></footer>
 </body>
