--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -32,7 +32,7 @@
                     <th scope="col">Наименование продукта</th>
                     <th scope="col">Описание продукта</th>
                     <th scope="col">Цена</th>
-                    <th scope="col">В складе</th>
+                    <th scope="col">На складе</th>
                 </tr>
                 </thead>
                 <tbody>
