--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -5,8 +5,8 @@
     <nav class="my-2 my-md-0 mr-md-3">
         <a class="p-2 text-dark" href="/login">Login</a>
         <a sec:authorize="isAuthenticated()" class="p-2 text-dark" href="/orders">Заказы</a>
-        <a sec:authorize="hasAuthority('ADMIN')" class="p-2 text-dark" href="/services">Услуги</a>
-        <a sec:authorize="hasAuthority('ADMIN')" class="p-2 text-dark" href="/products">Товары</a>
+        <a sec:authorize="hasAuthority('MODERATOR')" class="p-2 text-dark" href="/services">Услуги</a>
+        <a sec:authorize="hasAuthority('MODERATOR')" class="p-2 text-dark" href="/products">Товары</a>
         <a sec:authorize="isAuthenticated()" class="p-2 text-dark" href="/providers">Поставщики</a>
         <a sec:authorize="isAuthenticated()" class="p-2 text-dark" href="/types">Устройства</a>
         <a sec:authorize="isAuthenticated()" class="p-2 text-dark" href="/models">Модели</a>
