--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -21,7 +21,8 @@
             </form>
         </div>
     </section>
-
+    <header>
+    </header>
     <div class="container">
 
         <div class="row">
